--- a/styles/style.css
+++ b/styles/style.css
@@ -1,20 +1,22 @@
 body {
-    background-color: aqua;
+    background-color: #8FBC8F;
     display: flex;
     justify-content: center;
     text-align: center;
     font-family: math;
-   }
+}
 
 .externalContainer {
     width: 600px;
-    background-color: white;
+    background: linear-gradient(#E0FFFF, #A9A9A9);
+
 }
 
 .chapterContainer {
     width: auto;
     display: flex;
     margin-top: 30px;
+    background: linear-gradient(to right, #AFEEEE, #20B2AA);
 }
 
 .photo {
@@ -48,26 +50,43 @@ body {
     text-align: left;
 }
 
-h3 {
+h2 {
     margin-left: 15px;
     margin-top: 5px;
 }
 
+h3 {
+    margin: 10px 0px 0px 0px;
+}
+
 p {
     margin: 5px;
-    background: #7FFFD4;
     font-family: math;
     font-size: 14px;
 }
 
-li {
-    list-style-type: none;
+ul {
+    margin: 5px;
+    font-family: math;
+    font-size: 14px;
 }
 
 .contactsContainer {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    align-items: center;
     margin-top: 30px;
+    background: linear-gradient(to right, #AFEEEE, #20B2AA);
+
+}
+
+.footer__logo {
+    width: 300px;
+}
+
+img {
+    width: 100px;
+    height: 40px; 
 }
 
 .contacts {
@@ -75,4 +94,10 @@ li {
     display: inherit;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+}
+
+.footer__list {
+    list-style-type: none;
+    padding-left: 0px;
 }
