fix: resize containers and padding

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html {
    scroll-behavior: smooth;
 }
 body {
-   width: 750px;
+   width: 1000px;
    margin: 0 auto;
    background: url('./img/abstract-3.jpeg');
    background-repeat: no-repeat;
@@ -26,100 +26,6 @@ body {
    justify-content: center;
    text-align: center;
    flex-direction: column;
-}
-.header {
-   width: inherit;
-   height: 50px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   background: linear-gradient(to right, #fdfdfd, #9b9e9e,#9b9e9e, #fdfdfd);
-}
-.nav {
-   list-style-type: none;
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   width: 740px;
-   margin: 10px;
-   font-size: 14px;
-}
-.active:hover {
-   color: red;
-   transition: .3s;
-}
-.chapter-container {
-   width: inherit;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   margin-top: 20px;
-   background: linear-gradient(to right, #fdfdfd8e, #3c444454, #fdfdfd8e);
-}
-.photo-container {
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   width: 50%;
-}
-.photo {
-   width: 140px;
-   height: 199px;
-   border-radius: 20%;
-   cursor: pointer;
-}
-.name {
-   width: 50%;
-   text-align: center;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-}
-.container {
-   width: inherit;
-   margin-top: 20px;
-   display: flex;
-   justify-content: space-between;
-   background: linear-gradient(to right, #fdfdfd8e, #3c444471);
-}
-.container-me {
-   width: 50%;
-}
-.cod {
-   width: 50%;
-}
-.subtitle {
-   margin-top: 15px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-}
-.container-left {
-   width: 250px;
-   padding: 10px 0 20px 0;
-   display: flex;
-   justify-content: center;
-}
-.container-text {
-   width: 350px;
-   text-align: left;
-   word-spacing: 3px;
-   padding: 19px 0 15px 20px;
-}
-.key-skills {
-   width: inherit;
-   text-align: left;
-   padding: 10px 0 15px 20px;
-   line-height: 20px;
-   word-spacing: 3px;
-}
-.container-code{
-   text-align: left;
-   padding: 0 20px 0 0;
-}
-pre {
-   padding: 0;
-   margin: 0;
 }
 h1 {
    font-family: 'Inter';
@@ -133,7 +39,11 @@ h2 {
    font-weight: 700;
 }
 h3 {
-   margin: 10px 0px 0px 0px;
+   font-family: 'Inter';
+   font-style: normal;
+   font-weight: 400;
+   font-size: 15px;
+   text-align: center;
 }
 p {
    font-family: 'Inter';
@@ -149,6 +59,7 @@ ul {
    font-weight: 400;
    padding: 0;
    margin: 0;
+   list-style-type: none;
 }
 a {
    text-decoration: none;
@@ -157,6 +68,75 @@ a {
    font-style: normal;
    font-weight: 400;
    transition: .9s;
+}
+.header {
+   margin-top: 10px;
+}
+.container {
+   margin: 0 auto;
+   width: 1000px;
+   overflow: hidden;
+}
+.header__container {
+   position: relative;
+   width: 100%;
+   display: flex;
+   align-items: center;
+   color: #202026;
+   text-transform: uppercase;
+}
+.header__photo {
+   width: 50%;
+   display: flex;
+   justify-content: center;
+   overflow: hidden;
+}
+.photo__container {
+   width: 50%;
+   height: 50%;
+   border-radius: 20%;
+   cursor: pointer;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+.header__content {
+   width: 70%;
+   height: 200px;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-around;
+}
+.header__menu {
+   height: 20%;
+   display: flex;
+   align-items: center;
+   margin-left: 10px;
+   background: linear-gradient(to right, #fdfdfd8e, #3c444454, #fdfdfd8e);
+   font-size: 18px;
+}
+.nav__list {
+   width: 740px;
+   margin: 10px;
+   display: flex;
+   justify-content: space-between;
+}
+.nav__link {
+   color: #202026;
+   font-weight: 600;
+}
+.nav__link:hover {
+   color: red;
+   transition: .3s;
+}
+.header__info {
+   height: 70%;
+   padding-right: 20px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   margin-left: 10px;
+   background: linear-gradient(to right, #fdfdfd8e, #3c444454, #fdfdfd8e);
 }
 .footer-container {
    width: inherit;
