--- a/style.css
+++ b/style.css
@@ -214,6 +214,53 @@ a {
 .skills__github {
    background-image: url(./img/svg/github-svgrepo-com.svg);
 }
+/* section About */
+.main__container {
+   margin-left: 10px;
+   background: linear-gradient(to right, #fdfdfd8e, #3c444454, #fdfdfd8e);
+}
+.main__about {
+   margin-left: 20px;
+   display: flex;
+   flex-direction: column;
+}
+.main__header {
+   font-size: 28px;
+   text-transform: uppercase;
+   font-weight: 600;
+   margin-bottom: 5px;
+   margin-top: 20px;
+}
+.main__descr {
+   font-family: 'Inter';
+   font-style: normal;
+   font-weight: 400;
+   margin-bottom: 5px;
+   margin-right: 20px;
+   text-align: justify;
+   text-indent: 25px;
+}
+.main__subheader {
+   font-size: 20px;
+   text-transform: uppercase;
+   font-weight: 600;
+   margin-top: 20px;
+}
+.main__list {
+   margin: 0 0 10px 0;
+   list-style: circle
+}
+.main__item {
+   font-size: 18px;
+   margin: 10px 0
+}
+.code-example {
+   display: flex;
+   flex-direction: column
+}
+
+
+
 
 .footer-container {
    width: inherit;
